manifests/base/argocd-monorepo-repo-server/argocd-repo-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: argocd-monorepo-repo-server
    app.kubernetes.io/part-of: argocd
    app.kubernetes.io/component: monorepo-repo-server
  name: argocd-monorepo-repo-server
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: argocd-monorepo-repo-server
  template:
    metadata:
      labels:
        app.kubernetes.io/name: argocd-monorepo-repo-server
    spec:
      serviceAccountName: argocd-repo-server
      automountServiceAccountToken: false
      containers:
      - name: argocd-monorepo-repo-server
        image: quay.io/argoproj/argocd-monorepo-controller:latest
        imagePullPolicy: Always
        args:
          - /usr/local/bin/argocd-monorepo-repo-server
        ports:
        - containerPort: 8091
        - containerPort: 8094
        livenessProbe:
          httpGet:
            path: /healthz?full=true
            port: 8094
          initialDelaySeconds: 30
          periodSeconds: 30
          failureThreshold: 3
          timeoutSeconds: 5
        readinessProbe:
          httpGet:
            path: /healthz
            port: 8094
          initialDelaySeconds: 5
          periodSeconds: 10
        securityContext:
          runAsNonRoot: true
          readOnlyRootFilesystem: true
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          seccompProfile:
            type: RuntimeDefault
        volumeMounts:
        - name: ssh-known-hosts
          mountPath: /app/config/ssh
        - name: tls-certs
          mountPath: /app/config/tls
        - name: gpg-keys
          mountPath: /app/config/gpg/source
        - name: gpg-keyring
          mountPath: /app/config/gpg/keys
        - name: argocd-repo-server-tls
          mountPath: /app/config/reposerver/tls
        - name: tmp
          mountPath: /tmp
        - mountPath: /helm-working-dir
          name: helm-working-dir
        - mountPath: /home/argocd/cmp-server/plugins
          name: plugins
      # Currently there is no support for CMP
      # initContainers:
      # - command:
      #   - /bin/cp
      #   - -n
      #   - /usr/local/bin/argocd
      #   - /var/run/argocd/argocd-cmp-server
      #   image: quay.io/argoproj/argocd:latest
      #   name: copyutil
      #   securityContext:
      #     runAsNonRoot: true
      #     readOnlyRootFilesystem: true
      #     allowPrivilegeEscalation: false
      #     capabilities:
      #       drop:
      #       - ALL
      #     seccompProfile:
      #       type: RuntimeDefault
      #   volumeMounts:
      #   - mountPath: /var/run/argocd
      #     name: var-files
      volumes:
        - name: ssh-known-hosts
          configMap:
            name: argocd-ssh-known-hosts-cm
        - name: tls-certs
          configMap:
            name: argocd-tls-certs-cm
        - name: gpg-keys
          configMap:
            name: argocd-gpg-keys-cm
        - name: gpg-keyring
          emptyDir: {}
        - name: tmp
          emptyDir: {}
        - name: helm-working-dir
          emptyDir: {}
        - name: argocd-repo-server-tls
          secret:
            secretName: argocd-repo-server-tls
            optional: true
            items:
            - key: tls.crt
              path: tls.crt
            - key: tls.key
              path: tls.key
            - key: ca.crt
              path: ca.crt
        - emptyDir: {}
          name: var-files
        - emptyDir: {}
          name: plugins
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            podAffinityTerm:
              labelSelector:
                matchLabels:
                  app.kubernetes.io/name: argocd-repo-server
              topologyKey: kubernetes.io/hostname
          - weight: 5
            podAffinityTerm:
              labelSelector:
                matchLabels:
                  app.kubernetes.io/part-of: argocd
              topologyKey: kubernetes.io/hostname
      nodeSelector:
        kubernetes.io/os: linux
