manifests/base/argocd-monorepo-repo-server/argocd-monorepo-repo-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: argocd-monorepo-repo-server
    app.kubernetes.io/part-of: argocd
    app.kubernetes.io/component: monorepo-repo-server
  name: argocd-monorepo-repo-server
spec:
  ports:
  - name: server
    protocol: TCP
    port: 8091
    targetPort: 8091
  - name: metrics
    protocol: TCP
    port: 8094
    targetPort: 8094
  selector:
    app.kubernetes.io/name: argocd-monorepo-repo-server
