manifests/base/argocd-monorepo-repo-server/argocd-monorepo-repo-server-network-policy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  labels:
    app.kubernetes.io/name: argocd-monorepo-repo-server
    app.kubernetes.io/part-of: argocd
    app.kubernetes.io/component: monorepo-repo-server
  name: argocd-monorepo-repo-server-network-policy
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: argocd-monorepo-repo-server
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: argocd-monorepo-controller
      ports:
        - protocol: TCP
          port: 8091
    - from:
        - namespaceSelector: { }
      ports:
        - port: 8094
